--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -43,6 +43,7 @@
         android:id="@+id/btnSalesActivity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#B095DF"
         android:text="View Sales"
         app:layout_constraintEnd_toStartOf="@+id/btnItemsActivity"
         app:layout_constraintHorizontal_bias="0.5"
