--- a/app/src/main/res/layout/activity_user_sales.xml
+++ b/app/src/main/res/layout/activity_user_sales.xml
@@ -34,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#B095DF"
         android:text="My Profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
