--- a/app/src/main/res/layout/your_sale_items_layout.xml
+++ b/app/src/main/res/layout/your_sale_items_layout.xml
@@ -47,7 +47,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtYourItemDescription" />
 
         <Button
-            android:id="@+id/btnYourSaleEdit"
+            android:id="@+id/btnYourSaleView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -64,7 +64,7 @@
             android:layout_marginEnd="16dp"
             android:text="Delete"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnYourSaleEdit" />
+            app:layout_constraintTop_toBottomOf="@+id/btnYourSaleView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
