--- a/app/src/main/res/layout/your_sales_layout.xml
+++ b/app/src/main/res/layout/your_sales_layout.xml
@@ -7,12 +7,12 @@
     android:paddingBottom="8dp">
 
     <Button
-        android:id="@+id/btnYourSaleEdit"
+        android:id="@+id/btnYourSaleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="Edit"
+        android:text="View"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_marginEnd="16dp"
         android:text="Delete"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnYourSaleEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/btnYourSaleView" />
 
     <TextView
         android:id="@+id/txtYourSaleTitle"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="24dp"
         android:text="Title"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleEdit"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +48,7 @@
         android:layout_marginEnd="24dp"
         android:text="Address"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleEdit"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtYourSaleTitle" />
