--- a/app/src/main/res/layout/your_sales_layout.xml
+++ b/app/src/main/res/layout/your_sales_layout.xml
@@ -7,22 +7,12 @@
     android:paddingBottom="8dp">
 
     <Button
-        android:id="@+id/btnYourSaleView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="View"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btnYourSaleDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="Delete"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnYourSaleView" />
 
@@ -35,7 +25,7 @@
         android:layout_marginEnd="24dp"
         android:text="Title"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleView"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,8 +38,7 @@
         android:layout_marginEnd="24dp"
         android:text="Address"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleView"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtYourSaleTitle" />
 
@@ -64,5 +53,15 @@
         app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
         app:layout_constraintStart_toStartOf="@+id/txtYourSaleAddress"
         app:layout_constraintTop_toBottomOf="@+id/txtYourSaleAddress" />
+
+    <Button
+        android:id="@+id/btnYourSaleView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="View"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
