--- a/app/src/main/res/layout/activity_user_sales.xml
+++ b/app/src/main/res/layout/activity_user_sales.xml
@@ -66,7 +66,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
-        android:id="@+id/lstSales"
+        android:id="@+id/lstUserItems"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
