--- a/app/src/main/res/layout/your_sales_layout.xml
+++ b/app/src/main/res/layout/your_sales_layout.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="8dp">
 
     <Button
-        android:id="@+id/btnYourSaleDelete"
+        android:id="@+id/btnYourItemDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -25,7 +25,7 @@
         android:layout_marginEnd="24dp"
         android:text="Title"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourItemDelete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,7 +38,7 @@
         android:layout_marginEnd="24dp"
         android:text="Address"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourItemDelete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtYourSaleTitle" />
 
@@ -50,7 +50,7 @@
         android:layout_marginEnd="24dp"
         android:text="0 Items"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnYourSaleDelete"
+        app:layout_constraintEnd_toStartOf="@+id/btnYourItemDelete"
         app:layout_constraintStart_toStartOf="@+id/txtYourSaleAddress"
         app:layout_constraintTop_toBottomOf="@+id/txtYourSaleAddress" />
 
